--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2272,3 +2272,54 @@ button,
     margin-top: 0;
     padding-top: 0; }
 
+.scroll-up-button{
+  all:unset;
+  position: fixed;
+  bottom: 25px;
+  right: 30px;
+  height: 50px;
+  width: 50px;
+  background-color: #7f888f;
+  border-radius: 99%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 9999;           /* ✅ Forces it above EVERYTHING */
+}
+.scroll-up-button:hover{
+  background-color: #f56a6a;
+}
+.scroll-up-button .arrow-up{
+  width: 12px;
+  height: 12px;
+  border-left: 4px solid #f9f9f9;
+  border-bottom: 4px solid #f9f9f9;
+  transform: rotate(135deg);
+  margin-bottom: -8px;
+  pointer-events: none;
+}
+
+.home-button{
+  all:unset;
+  position: fixed;
+  bottom: 90px;     
+  right: 30px;
+  height: 50px;
+  width: 50px;
+  background-color: #7f888f;
+  border-radius: 99%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 9999;
+}
+.home-button:hover{
+  background-color: #f56a6a;
+}
+.home-button i{
+  font-size: 18px;     
+  pointer-events: none;
+  color: #f9f9f9;
+}
